--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,4 +1,5 @@
 .footer {
+  flex-shrink: 0;
   width: 100%;
   background-color: #f1f1f1;
   color: black;
@@ -6,16 +7,15 @@
 .footerContent {
   display: flex;
   flex-direction: row;
-
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 20px;
 }
 .textContent {
-  max-width: 600px;
+  max-width: 500px;
 }
-/* .listContainer {
-  } */
-
+.listContainer {
+  margin: 0 20px;
+}
 .listContainer h3 {
   margin: 0;
   padding: 0;
