--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -27,6 +27,11 @@
   letter-spacing: 5px;
   font-family: 'Cardo', serif;
 }
+.logoLink {
+  align-items: center;
+  margin: 0;
+  text-decoration: none;
+}
 .navLink {
   color: white;
   text-decoration: none;
