--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -101,3 +101,18 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+  min-height: 50vh;
+}
