--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -8,12 +8,13 @@
   height: 100%;
   /* Add the mask image */
   background-image: linear-gradient(
-      to right,
-      rgba(208, 173, 108, 0.726),
-      rgba(254, 253, 250, 0.638)
+      to bottom left,
+      rgba(47, 47, 47, 0.59),
+      rgba(255, 255, 255, 0.95)
     ),
-    url('https://images.unsplash.com/photo-1620030537215-9ef4d9c0d3ab?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1075&q=80');
+    url('https://images.unsplash.com/photo-1556075798-4825dfaaf498?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1176&q=80');
   background-size: cover;
+  filter: grayscale(100%);
 }
 
 .heroContainer {
@@ -39,11 +40,15 @@
   font-size: 3rem;
   text-transform: capitalize;
 }
+.subTitle {
+  font-size: 2rem;
+  margin-left: 10px;
+}
 
 .tagline {
   color: rgba(0, 0, 0, 0.857);
   font-size: 1.2rem;
-  text-shadow: 1px 2px 10px rgb(255, 255, 255);
+
   position: relative;
   z-index: 10;
 }
