--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,14 +1,11 @@
 .modalContainer {
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(0, 0, 0, 0.623);
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
 }
 .modal {
   display: flex;
