--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-p {
+p,
+input,
+textarea,
+label,
+select,
+option {
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
@@ -110,6 +115,7 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: #f1f1f1;
 }
 
 main {
