--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -11,6 +11,34 @@
   transition: background-color 0.3s ease;
 }
 
+.submitBtn {
+  background-color: rgb(47, 47, 47);
+  border: 1px solid rgb(47, 47, 47);
+  color: white;
+  font-family: 'Cardo', serif;
+  font-size: 16px;
+  padding: 8px 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+}
+
+.submitBtn:disabled {
+  background-color: rgb(47, 47, 47);
+  border: 1px solid rgb(47, 47, 47);
+  color: rgb(154, 154, 154);
+  font-family: 'Cardo', serif;
+  font-size: 16px;
+  padding: 8px 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 .btn:hover {
   background-color: white;
   border: 1px solid rgb(47, 47, 47);
