--- a/src/components/contactForm/contactForm.module.css
+++ b/src/components/contactForm/contactForm.module.css
@@ -13,7 +13,6 @@
 .form {
   display: flex;
   flex-direction: column;
-  row-gap: 10px;
   background-color: #e9eae77a;
   padding: 30px;
   max-width: 280px;
@@ -22,7 +21,7 @@
   border-radius: 5px;
 }
 .label {
-  font-family: 'PT sans', sans-serif;
+  font-family: 'Cardo', serif;
   text-transform: capitalize;
   max-width: 340px;
   margin-bottom: 10px;
@@ -37,6 +36,7 @@
   border-radius: 5px;
   border: 1px solid rgb(55, 55, 55);
   resize: none;
+
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -51,8 +51,19 @@
   font-size: 12px;
   color: rgb(133, 0, 0);
   background-color: rgba(255, 0, 0, 0.222);
-  padding: 4px;
+  padding: 0 2px;
   margin-top: 2px;
   border: 1px solid rgba(133, 0, 0, 0.439);
   border-radius: 5px;
+}
+
+.validationWarningEmpty {
+  font-size: 12px;
+  color: transparent;
+  background-color: transparent;
+  padding: 2px;
+  margin-top: 2px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  height: 25px;
 }
