--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -32,9 +32,93 @@
   margin: 0;
   text-decoration: none;
 }
+.mobileLogoLink {
+  display: none;
+}
 .navLink {
   color: white;
   text-decoration: none;
   border-bottom: solid 2px rgb(255, 255, 255);
   padding: 16px 16px 4px 16px;
+}
+
+.navbar-menu {
+  display: none; /* Hide by default */
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+  margin-right: 15px;
+  width: 30px;
+}
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 767px) {
+  .navbar {
+    width: 100%;
+    background-color: rgb(66, 66, 66);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 10px 10px 0 0;
+  }
+  .navList {
+    display: none; /* Hide the navigation menu */
+  }
+
+  .navItem {
+    width: 100%;
+    text-align: center;
+  }
+
+  .mobileLogoLink {
+    display: block;
+    margin-left: 15px;
+    text-decoration: none;
+  }
+
+  .logo {
+    font-size: 18px;
+    text-transform: uppercase;
+    color: rgb(255, 251, 251);
+    font-weight: 900;
+    letter-spacing: 5px;
+    font-family: 'Cardo', serif;
+  }
+
+  .navbar-menu {
+    display: block; /* Show the hamburger icon */
+    margin-right: 15px;
+    padding-bottom: 6px;
+    z-index: 3000;
+  }
+
+  /* Show the navigation menu when the hamburger icon is clicked */
+  .navList.show {
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    background-color: rgb(66, 66, 66);
+    z-index: 1000;
+    margin: 0;
+  }
+
+  .navList.show > .navItem:first-child {
+    display: none;
+  }
+
+  /* Style the links in the navigation menu */
+  .navLink {
+    display: block;
+    color: white;
+    text-decoration: none;
+    width: fit-content;
+    margin: auto;
+    border-bottom: solid 2px rgb(255, 255, 255);
+    font-size: 2rem;
+  }
 }
