Contact page info

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,8 @@ input,
 textarea,
 label,
 select,
-option {
+option,
+li {
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
@@ -14,7 +15,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+strong {
   font-family: 'Cardo', serif;
 }
 /* Box sizing rules */
